--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>soul-mate</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head> 
 <body>
   <a href="main.html">
@@ -119,8 +119,8 @@
     </div>
   </a>
 </body>
-<script src='jquery.min.js'></script>
-<script src='jquery.parallax.js'></script>
-<script src="index.js"></script>
+<script src='js/jquery.min.js'></script>
+<script src='js/jquery.parallax.js'></script>
+<script src="js/index.js"></script>
 </body>
 </html>
