--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head> 
 <body>
-  <a href="main.html">
+    <embed src="music.mp3" autostart="true" loop="true" hidden="true"></embed>
     <div id="scene" class="stars-wrapper">
       <div data-depth="0.00" class="layer"></div>
       <div data-depth="0.30" class="stars-cluster stars-cluster-1 layer">
@@ -117,7 +117,6 @@
         <h1 data-title="你的微笑便是我夜空中的繁星 T&J" class="title">你的微笑便是我夜空中的繁星 T&J</h1>
       </div>
     </div>
-  </a>
 </body>
 <script src='jquery.min.js'></script>
 <script src='jquery.parallax.js'></script>
