--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>soul-mate</title>
-	<link rel="stylesheet" href="home.css">
+	<link rel="stylesheet" href="./css/home.css">
 </head>
 <body>
 	<div class="contrainer header">
@@ -17,7 +17,7 @@
 	<div style="width: 100%; height: auto; line-height: 25px; text-align: center;"></div>	
 </body>
 <script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
-<script src='jquery.eventFlow.js'></script>
+<script src='./js/jquery.eventFlow.js'></script>
 <script>
 	$(function(){
 		var bigEvent =[{
