--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./css/style.css">
 </head> 
 <body>
-    <embed src="./mp3/majiko - アイロニ.mp3" hidden="true" autostart="true" loop="true">
+    <embed src="majiko - アイロニ.mp3" hidden="true" autostart="true" loop="true">
     <div id="scene" class="stars-wrapper">
       <div data-depth="0.00" class="layer"></div>
       <div data-depth="0.30" class="stars-cluster stars-cluster-1 layer">
